--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
+/bin/
+
+# Compiled class file
+*.class
+*.classpath
+*.settings
+*.project
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 /target/
