--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>4.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
